--- a/aboutme.html
+++ b/aboutme.html
@@ -28,7 +28,7 @@
   
   <article>
     <h1>About Me</h1>
-    <p><img src="Kieran-Ryan.jpg" alt="Emilio Lopez" width="122" height="122" style="float:left; margin-right:50px">
+    <p><img src="download.jfif" alt="Emilio Lopez" width="122" height="122" style="float:left; margin-right:50px">
 Emilio Lopez holds a PhD in Management Information Systems from KeimYung University in South
 Korea. He completed an MBA at National Tsing Hua University in Taiwan, his undergraduate degree is
 in Computer Science. He teaches Management Information Systems courses to the business students and Fundamentals of Computing and Database courses at the
