--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ and the potential of computing machines.</p>
 </section>
 
 <footer>
-  <p>@ Powered by UB</p>
+  <p>@ Powered by milo</p>
 </footer>
 
 </body>
