--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    <p></p>
 
     <p>This course is an introduction to the fundamentals of Computer Science
-that will provide students with a foundation for future courses in Computer
+that will provide students wit a foundation for future courses in Computer
 Science. The course is a broad survey of the discipline through topics that
 allow students to understand the capabilities of computer systems in terms
 of: the computer architecture; operating systems and computer networks;
