--- a/concepts.html
+++ b/concepts.html
@@ -27,11 +27,11 @@
   </nav>
   
   <article>
-  <center> <a href="https://docs.google.com/presentation/d/1U9iXLG5U7AraTIjt5SQsIQRBqt_v-x6M59IeAXXUDR0/edit?usp=sharing"><img src="concepts.PNG" alt="Concepts" width="515" height="290" ></a>
+  <center> <a href="https://docs.google.com/presentation/d/1EwMwv1i5ldMB3bYPeqBEHl-Ki5CXcEMa5JmcRHNyeak/edit?usp=sharing"><img src="concepts.PNG" alt="Concepts" width="515" height="290" ></a>
    <p></p>
 
     <p>Click on the image above for presentation.</p>
-	  <p> <a href="https://docs.google.com/presentation/d/1EwMwv1i5ldMB3bYPeqBEHl-Ki5CXcEMa5JmcRHNyeak/edit?usp=sharing">Click here for recording.</a></p></center>
+	  <p> <a href="https://drive.google.com/file/d/1MQ6RLFJ4ePxckq2uc3vrH9X65NVjI4kb/view?usp=sharing">Click here for recording.</a></p></center>
     </article>
 </section>
 
