--- a/concepts.html
+++ b/concepts.html
@@ -27,7 +27,7 @@
   </nav>
   
   <article>
-  <center> <a href="https://docs.google.com/presentation/d/1EwMwv1i5ldMB3bYPeqBEHl-Ki5CXcEMa5JmcRHNyeak/edit?usp=sharing"><img src="concepts.PNG" alt="Concepts" width="515" height="290" ></a>
+  <center> <a href="https://docs.google.com/presentation/d/1EwMwv1i5ldMB3bYPeqBEHl-Ki5CXcEMa5JmcRHNyeak/edit?usp=sharing"><img src="concepts.png" alt="Concepts" width="515" height="290" ></a>
    <p></p>
 
     <p>Click on the image above for presentation.</p>
