--- a/aboutme.html
+++ b/aboutme.html
@@ -29,11 +29,7 @@
   <article>
     <h1>About Me</h1>
     <p><img src="download.jfif" alt="Emilio Lopez" width="122" height="122" style="float:left; margin-right:50px">
-Emilio Lopez holds a PhD in Management Information Systems from KeimYung University in South
-Korea. He completed an MBA at National Tsing Hua University in Taiwan, his undergraduate degree is
-in Computer Science. He teaches Management Information Systems courses to the business students and Fundamentals of Computing and Database courses at the
-University of Belize. Dr. Ryan currently conducts research on information system success from a
-developing country perspective. His service work is making programing classes available at all secondary
+	    Hi my name is emilio lopez.
 schools in Belize.</p>
     </article>
 </section>
